--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
-    "@types/react": "^18.2.12",
-    "@types/react-dom": "^18.2.5",
+    "@types/node": "^20.3.2",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "@types/uuid": "^9.0.2",
     "antd": "^5.6.1",
     "axios": "^1.4.0",
@@ -18,9 +19,10 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.12.0",
-    "react-scripts": "5.0.1",
     "sass": "^1.62.1",
+    "typescript": "^5.1.6",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
@@ -50,6 +52,6 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.195",
-    "typescript": "^5.1.3"
+    "react-scripts": "^5.0.1"
   }
 }
